--- a/aprendiendo-angular/src/app/home/home.component.html
+++ b/aprendiendo-angular/src/app/home/home.component.html
@@ -1,1 +1,14 @@
-<p>home works!</p>
+<h1>Página principal</h1>
+
+<div *ngIf="identificado; then siIdentificado else noIdentificado">
+</div>
+
+<ng-template #siIdentificado>
+  <h3>Estás identificado en la aplicación</h3>
+  <button (click)="unsetIdentificado()">Borrar identificación</button>
+</ng-template>
+
+<ng-template #noIdentificado>
+  <p>No estás identificado, pulsa este botón para identificarte</p>
+  <button (click)="setIdentificado()">Identificarse</button>
+</ng-template>
