--- a/aprendiendo-angular/src/app/cursos/cursos.component.html
+++ b/aprendiendo-angular/src/app/cursos/cursos.component.html
@@ -1,1 +1,4 @@
-<p>cursos works!</p>
+<h1>Componente de cursos</h1>
+<button (click)="redirigir()">Llévame a Zapatillas</button>
+<h3 *ngIf="nombre">Bienvenido {{nombre}}</h3>
+<h3 *ngIf="followers">Tus seguidores son: {{followers}}</h3>
