--- a/aprendiendo-angular/src/app/app.component.html
+++ b/aprendiendo-angular/src/app/app.component.html
@@ -13,6 +13,7 @@
     <a [routerLink]="['/cursos']" [routerLinkActive]="['active']">Cursos</a>
     <a [routerLink]="['/videojuegos']" [routerLinkActive]="['active']">Videojuegos</a>
     <a [routerLink]="['/externo']" [routerLinkActive]="['active']">Externo</a>
+    <a [routerLink]="['/contacto']" [routerLinkActive]="['active']">Contacto</a>
   </nav>
   <!-- <button (click)="ocultarVideojuegos(false)" *ngIf="mostrarVideojuegos">Ocultar</button> -->
   <!-- <button (click)="ocultarVideojuegos(true)" *ngIf="!mostrarVideojuegos">Mostrar</button> -->
