--- a/proyecto-angular/src/app/components/projects/projects.component.html
+++ b/proyecto-angular/src/app/components/projects/projects.component.html
@@ -2,11 +2,13 @@
   <h2>Proyectos</h2>
   <ul>
     <li class="project" *ngFor="let project of projects">
-      <div class="image">
-        <img src="{{url + 'get-image/' + project.image}}" *ngIf="project.image">
-      </div>
-      <h3>{{project.name}}</h3>
-      <p>{{project.category}}</p>
+      <a [routerLink]="['/proyecto', project._id]">
+        <div class="image">
+          <img src="{{url + 'get-image/' + project.image}}" *ngIf="project.image">
+        </div>
+        <h3>{{project.name}}</h3>
+        <p>{{project.category}}</p>
+      </a>
     </li>
   </ul>
 </div>
