--- a/proyecto-angular/src/app/components/projects/projects.component.html
+++ b/proyecto-angular/src/app/components/projects/projects.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container" *ngIf="projects">
   <h2>Proyectos</h2>
   <ul>
     <li class="project" *ngFor="let project of projects">
