--- a/proyecto-angular/src/app/components/contact/contact.component.html
+++ b/proyecto-angular/src/app/components/contact/contact.component.html
@@ -1,1 +1,7 @@
-<p>contact works!</p>
+<div class="container">
+  <div class="bxslider">
+    <div><img src="../../../assets/img/coffee1.jpg" title="Funky roots"></div>
+    <div><img src="../../../assets/img/coffee2.jpg" title="The long and winding road"></div>
+    <div><img src="../../../assets/img/coffee3.jpg" title="Happy trees"></div>
+  </div>
+</div>
